fix position main for z-index

--- a/src/styles/IconSidebar.module.css
+++ b/src/styles/IconSidebar.module.css
@@ -5,6 +5,7 @@
     border-radius: 6px;
     display: flex;
     justify-content: center;
+    cursor: pointer;
 }
 
 .icon img{
