--- a/src/styles/Sidebar.module.css
+++ b/src/styles/Sidebar.module.css
@@ -16,7 +16,6 @@
 .icons{
     display: flex;
     flex-direction: column;
-    justify-content: center;
     gap : 20px;
 }
 
